<resources>
    <string name="app_name">Address Book</string>
    <string name="usuario">Usuario</string>
    <string name="contraseña">Contraseña</string>
    <string name="entrar">Entrar</string>
    <string name="registro">Registro</string>

    <string name="remail">Email</string>
    <string name="rusuario">Usuario</string>
    <string name="rcontraseña">Contraseña</string>
    <string name="rrcontraseña">Contraseña</string>
    <string name="raceptar">Aceptar</string>
    <string name="rcancelar">Cancelar</string>

    <string name="Loggin">Loggin</string>
    <string name="Registrarse">Registro</string>
    <string name="Principal">Principal</string>
    <string name="Perfil">Mi Perfil</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
